# slidetap

./: .gitignore  .gitmodules  CHANGELOG.md  EXPORT_ONLY_USAGE.md  README.md  SETUP_DOCKER.md  docker-compose.yml
slidetap/: .gitignore  README.md  flask_run.bat  pyproject.toml  pytest.ini
slidetap-app/: .dockerignore  README.md  alembic.ini  config.yaml  pyproject.toml  pyrightconfig.json  run_task_app.sh
slidetap-app/apps/example/: pyproject.toml
slidetap-app/benchmarks/: bench_mapper_resolver.py
slidetap-app/dockerfiles/: appservice.Dockerfile  build.sh  taskservice.Dockerfile  webservice.Dockerfile
slidetap-app/slidetap/: __init__.py  config.py  logging.py  scheduler.py  service_provider.py  slidetap.py
slidetap-app/slidetap/apps/example/: app.py  (+20 more)
slidetap-app/slidetap/controller/: __init__.py  attribute_controller.py  image_controller.py  item_controller.py  project_controller.py  schema_controller.py
slidetap-app/slidetap/database/: __init__.py  attribute.py  db.py  item.py  mapper.py  project.py  task.py  types.py
slidetap-app/slidetap/exporter/: __init__.py  exporter.py  image_exporter.py  metadata_exporter.py
slidetap-app/slidetap/external_interfaces/: __init__.py  dataset_importer.py  image_export.py  image_exporter.py  image_import.py  image_importer.py  metadata_export.py  metadata_exporter.py  metadata_import.py  metadata_importer.py
slidetap-app/slidetap/image_processing/: image_processing_step.py  image_processor.py  step_image_processor.py
slidetap-app/slidetap/image_processor/: __init__.py  image_processing_step.py  image_processor.py
slidetap-app/slidetap/importer/: __init__.py  image_importer.py  importer.py  metadata_importer.py
slidetap-app/slidetap/model/: __init__.py  attribute.py  attribute_value_type.py  basic_auth_credentials.py  batch.py  batch_status.py  code.py  dataset.py  dataset_status.py  datetime_value.py  dzi.py  item.py  item_reference.py  item_value_type.py  mapper.py  measurement.py  project.py  project_status.py  session.py  table.py  validation.py
slidetap-app/slidetap/serialization/: __init__.py  attribute.py  base.py  basic_auth.py  batch.py  common.py  dataset.py  dzi.py  fields.py  item.py  mapper.py  project.py  table.py  validation.py
slidetap-app/slidetap/services/: __init__.py  attribute_service.py  batch_service.py  database_service.py  dataset_service.py  image_service.py  item_service.py  mapper_service.py  processing_service.py  project_service.py  schema_service.py  storage_service.py  validation_service.py
slidetap-app/slidetap/storage/: __init__.py  storage.py
slidetap-app/slidetap/task/: __init__.py  app_factory.py  scheduler.py  service_provider.py  signals.py  tasks.py
slidetap-app/slidetap/tasks/: __init__.py  celery.py  scheduler.py  tasks.py
slidetap-app/slidetap/test_classes/: image_exporter.py  image_importer.py  login_service.py  metadata_exporter.py  metadata_importer.py
slidetap-app/slidetap/util/: fileparser.py
slidetap-app/slidetap/web/: __init__.py  app_factory.py  flask_extension.py  preview_service.py  processing_service.py  service_provider.py
slidetap-app/src/slidetap/: __init__.py  config.py  logging.py  service_provider.py
slidetap-app/tests/: __init__.py  conftest.py  test_app_factory_spa.py  test_celery_config.py  test_fileparser.py  test_image_processing_step.py  test_image_status.py  test_integration.py  test_serialization.py
slidetap-app/tests/controller/: test_basic_auth_login_controller.py  test_batch_controller.py  test_project_controller.py
slidetap-app/tests/database/: test_image.py  test_mapper.py  test_project.py  test_sample.py  test_schema.py
slidetap-app/tests/router/: conftest.py  test_basic_auth_login_router.py  test_batch_router.py  test_project_router.py
slidetap-app/tests/services/: test_attribute_service.py  test_batch_service.py  test_database_service.py  test_file_operations.py  test_image_pipeline_service.py  test_mapper_service.py  test_metadata_import_service.py  test_project_service.py  test_storage_service.py  test_storage_service_disconnect.py
slidetap-app/tests/test_classes/: __init__.py  auth_service.py  image_exporter.py  image_importer.py  login_service.py  metadata_exporter.py  metadata_importer.py
slidetap-app/tests/test_data/: auth.json  input - batch 1.json  input - batch 2.json  input - batch 3.json  input.json
slidetap-app/tests/util/: test_mapper_matching.py
slidetap/dockerfiles/: appservice.Dockerfile
slidetap/slidetap/: README.md  __init__.py  config.py  flask_extension.py  scheduler.py  slidetap.py
slidetap/slidetap/controller/: __init__.py  attribute_controller.py  controller.py  image_controller.py  item_controller.py  mapper_controller.py  project_controller.py  schema_controller.py
slidetap/slidetap/database/: __init__.py  attribute.py  db.py  mapper.py  project.py
slidetap/slidetap/exporter/: __init__.py  exporter.py
slidetap/slidetap/image_processing/: __init__.py  image_processing_step.py  image_processor.py  step_image_processor.py
slidetap/slidetap/importer/: __init__.py  importer.py
slidetap/slidetap/model/: __init__.py  attribute_value_type.py  code.py  image_status.py  mapping.py  mapping_status.py  measurement.py  project_item.py  project_status.py  session.py  table.py
slidetap/slidetap/serialization/: __init__.py  attribute.py  base.py  basic_auth.py  common.py  dzi.py  item.py  mapper.py  project.py  schema.py  table.py
slidetap/slidetap/services/: __init__.py  attribute_service.py  image_service.py  item_service.py  mapper_service.py  project_service.py  schema_service.py
slidetap/slidetap/storage/: __init__.py  storage.py
slidetap/slidetap/test_classes/: __init__.py  auth_service.py  image_exporter.py  image_importer.py  login_service.py  metadata_exporter.py  metadata_importer.py  storage.py
slidetap/tests/: conftest.py  test_fileparser.py  test_integration.py  test_serialization.py
slidetap/tests/controller/: test_basic_auth_login_controller.py  test_project_controller.py
slidetap/tests/database/: test_image.py  test_project.py  test_sample.py  test_schema.py
(+749 files in other folders)
