[project]
name = "slidetap"
version = "0.2.0"
description = "App package for SlideTap"
authors = [
    {name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com"}
]
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.20",
    "SQLAlchemy-Utils>=0.38.3",
    "pandas>=2.0.0",
    "wsidicom>=0.27.1",
    "wsidicomizer>=0.22.1",
    "Pillow>=10.0.0",
    "celery>=5.4.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "dishka>=1.6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-watch>=4.2.0",
    "pycodestyle>=2.8.0",
    "black>=23.1.0",
    "codespell>=2.2.5",
    "slidetap-example",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    "httpx>=0.24.0",
]

[tool.uv.sources]
slidetap = { workspace = true }
slidetap-example = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "apps/example/"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
