[project]
name = "slidetap"
version = "0.2.0"
description = "App package for SlideTap"
authors = [
    {name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com"}
]
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.20",
    "SQLAlchemy-Utils>=0.38.3",
    "alembic>=1.13.0",
    "pandas>=2.0.0",
    "wsidicom>=0.30.0",
    "wsidicomizer>=0.25.0",
    "opentile>=0.21.0",
    "Pillow>=10.0.0",
    "procrastinate>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "dishka>=1.6.0",
]

[project.scripts]
slidetap-task-worker = "slidetap.task.worker_cli:main"
slidetap-task-init-schema = "slidetap.task.init_schema_cli:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
]
xlsx = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-watch>=4.2.0",
    "pycodestyle>=2.8.0",
    "black>=23.1.0",
    "codespell>=2.2.5",
    "slidetap-example",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    "httpx>=0.24.0",
    "decoy>=2.2.0",
    "pytest-timeout>=2.4.0",
    "pandas-stubs>=2.0.0",
    "pytest-asyncio>=1.3.0",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
slidetap = { workspace = true }
slidetap-example = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "apps/example/"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/slidetap",
    "apps/example/src/slidetap_example",
]
artifacts = [
    "src/slidetap/migrations/script.py.mako",
    "src/slidetap/migrations/versions/",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
