[project]
name = "slidetap"
version = "0.2.0"
description = "App package for SlideTap"
authors = [
    {name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com"}
]
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.20",
    "SQLAlchemy-Utils>=0.38.3",
    "alembic>=1.13.0",
    "pandas>=2.0.0",
    "wsidicom>=0.31.0",
    "wsidicomizer>=0.26.0",
    "opentile>=0.21.0",
    "Pillow>=10.0.0",
    "procrastinate>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "dishka>=1.6.0",
]

[project.scripts]
slidetap-task-worker = "slidetap.task.worker_cli:main"
slidetap-task-init-schema = "slidetap.task.init_schema_cli:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
]
xlsx = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "codespell>=2.2.5",
    "slidetap-example",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    "httpx>=0.24.0",
    "decoy>=2.2.0",
    "pytest-timeout>=2.4.0",
    "pandas-stubs>=2.0.0",
    "pytest-asyncio>=1.3.0",
    "openpyxl>=3.1.5",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "pytest-watcher>=0.6.3",
]

[tool.uv.sources]
slidetap = { workspace = true }
slidetap-example = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "apps/example/"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/slidetap",
    "apps/example/src/slidetap_example",
]
artifacts = [
    "src/slidetap/migrations/script.py.mako",
    "src/slidetap/migrations/versions/",
]

[tool.ruff]
target-version = "py311"
line-length = 88
# Alembic revision files are autogenerated; don't lint them.
extend-exclude = ["src/slidetap/migrations/versions"]

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (replaces the old pycodestyle dep)
# I: import sorting, UP: pyupgrade, B: bugbear, SIM: simplify
# S: flake8-bandit security rules (the free SAST baseline)
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables as argument defaults by design (B008 false positives).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# Asserts and hardcoded credentials are expected in test fixtures.
"tests/**" = ["S101", "S105", "S106"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
