[tool.poetry]
name = "slidetap"
version = "0.1.0"
description = ""
authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^3.0.0"
Flask-JWT-Extended = "^4.3.1"
flask-uuid = "^0.2"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.38.3"
APScheduler = "^3.8.1"
pandas = "^2.0.0"
requests = "^2.27.1"
wsidicomizer = "^0.12.1"
Pillow = "^10.0.0"
Authlib = "^1.2.0"
marshmallow = "^3.19.0"
openpyxl = "^3.1.2"
psycopg2-binary = {version = "^2.9.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-unordered = "^0.5.2"
pytest-watch = "^4.2.0"
pytest-timeout = "^2.1.0"
pycodestyle = "^2.8.0"
flake8 = "^5.0.4"
black = "^22.12.0"
coverage = "^7.2.7"
codespell = "^2.2.5"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
postresql = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
